# autograder_gui

./: .gitignore  README.md  main.py  pyproject.toml
Traditional-Version/: assignment-configuration.html  grade-configuration1.html  grading-configuration-screen.html  grading-results.html  homeworks-screen.html  index.html  plagarism-checking-results.html  plagarism-configuration1.html  plagarism-screen.html
Traditional-Version/Backup/4-22-2021/: general_styles.css
Traditional-Version/Backup/8-29-2021/: create-assignment-screen.html  index.html  readme.txt
Traditional-Version/css/: general_styles.css
autograder-electron-project/: assignment-configuration.html  grade-configuration1.html  grade-configuration2.html  grading-configuration-screen.html  grading-results.html  homework.html  index.html  main.js  package-lock.json  package.json  plagarism-checking-results.html  plagarism-configuration1.html  plagarism-configuration2.html  results-screen.html  secondary.html
autograder-electron-project/css/: general_styles.css
autograder-electron-project/js/: assignment-configuration.js  gradingResults.js  homework.js  plagarism.js
autograder_gui/: __main__.py  util.py  win_build.ps1
static/css/: assignment-configuration.css  general_styles.css
static/js/: assignment-configuration.js  base.js  callbacks.js  communications.js  gradingResults.js  homework.js  plagarism.js
static/templates/: assignment-configuration.html  base.html  grading-results.html  homework.html  index.html  plagiarism-checking-results.html  plagiarism-configuration1.html  results-screen.html
(+74 files in other folders)
