[tool.poetry]
name = "autograder_gui"
version = "0.1.0"
description = ""
authors = ["Ovsyanka <szmiev2000@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.7"
Eel = {extras = ["jinja2"], version = "^0.14.0"}

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
